# ict-agent

./: .gitignore  .gitmodules  CLAUDE.md  LIVE_SESSION.md  README.md  agent_test.md  debug_test.md  main.py  pyproject.toml  test.py
.github/workflows/: test-real-api.yml  test.yml
debug_test_output/: secret_code.py
dev/kernel_gen_demo/: DOCS.md  kernel_gen.py
dev/kernel_gen_demo/22_Tanh/project/: build.sh
dev/kernel_gen_demo/22_Tanh/project/cmake/util/: ascendc_gen_options.py  opdesc_parser.py
dev/kernel_gen_demo/22_Tanh/project/op_host/: tanh_custom.cpp
dev/kernel_gen_demo/22_Tanh/project/op_kernel/: tanh_custom.cpp
dev/kernel_gen_demo/29_Softplus/project/: CMakeLists.txt
dev/kernel_gen_demo/29_Softplus/project/cmake/: config.cmake
dev/kernel_gen_demo/29_Softplus/project/cmake/util/: ascendc_bin_param_build.py  const_var.py
dev/kernel_gen_demo/29_Softplus/project/ext/csrc/: op.cpp
dev/kernel_gen_demo/29_Softplus/project/op_host/: softplus_custom.cpp
dev/kernel_gen_demo/29_Softplus/project/op_kernel/: softplus_custom.cpp
dev/kernel_gen_demo/skills/: L0_project_structure.md  L1_elementwise_kernel.md  L2_example_add.md
docs/: async_fork_and_session.md  fork_and_subagents.md  live_session.md  multi_fork_test_manual.md  testing.md
examples/ascend/kernel_gen_demo/: DOCS.md  kernel_gen.py
examples/ascend/kernel_gen_demo/22_Tanh/: tanh_custom.json
examples/ascend/kernel_gen_demo/22_Tanh/project/cmake/: func.cmake
examples/ascend/kernel_gen_demo/22_Tanh/project/ext/: setup.py
examples/ascend/kernel_gen_demo/22_Tanh/project/op_host/: CMakeLists.txt  tanh_custom_tiling.h
examples/ascend/kernel_gen_demo/22_Tanh/project/op_kernel/: CMakeLists.txt
examples/ascend/kernel_gen_demo/29_Softplus/: softplus_custom.json
examples/ascend/kernel_gen_demo/29_Softplus/project/op_host/: softplus_custom_tiling.h
examples/ascend/kernel_gen_demo/29_Softplus/project/op_kernel/: CMakeLists.txt
results/uniopbench/hygon_k100/: report.md
results/uniopbench/ppu/: report.md
scripts/: SCRIPTS_SUMMARY.md  clean_logs.sh  cleanup_live_session.sh  close_session.sh  debug_test_messages.txt  debug_test_short.txt  generate_perf_report.py  kill_lingering_live_session_processes.sh  list_sessions.sh  live_session.sh  read_session_output.sh  reset_live_session.sh  run_20_turns.sh  run_enhancements_e2e.py  run_fork_smoke.py  run_fork_smoke.sh  run_live_e2e.py  run_live_e2e.sh  run_mixed_e2e.py  run_multi_fork_test.py  run_observed_session.sh  test_basic_live_session.sh  test_set_model.sh  wait_for_session_reply.sh
skills/ascendc-kernel-gen/: SKILL.md  elementwise-kernel.md  example-add.md  project-structure.md
skills/core/: SKILL.md
skills/cuda/: SKILL.md
skills/filesystem/: SKILL.md
skills/qa/: SKILL.md  questions.txt
skills/qa/questions/: q01.txt  q02.txt  q03.txt  q04.txt  q05.txt  q06.txt  q07.txt  q08.txt  q09.txt  q10.txt  q11.txt  q12.txt  q13.txt  q14.txt  q15.txt  q16.txt
skills/scout/: SKILL.md
skills/session/: SKILL.md
skills/shell/: SKILL.md
src/: ._ict_agent.egg-info
src/ict_agent/: __init__.py  compactor.py  context.py  llm.py  sandbox.py  skills.py  tools.py
src/ict_agent/app/: __init__.py  bootstrap.py  cli.py  config.py  live_session.py
src/ict_agent/commands/: __init__.py  common.py  registry.py
src/ict_agent/domains/: __init__.py
src/ict_agent/domains/cuda/: __init__.py  adapter.py  commands.py  gpu.py  prompts.py  recovery.py  task_manager.py
src/ict_agent/runtime/: agent_loop.py  current_context.py  hooks.py  logging.py  preemption.py  session.py
src/ict_agent/utils/: __init__.py  edit_diff.py
task/: TASK_TEMPLATE.md
task/example_axpby/: model.py
task/task_results/uniopbench/a100_uniopbench_v1/runs/20260308_222632/: perf_report.json  run_perf_benchmark.py  run_summary.json
task/task_results/uniopbench/a100_uniopbench_v1/runs/20260309_222137/: run_summary.json
task/task_results/uniopbench/a100_uniopbench_v1/runs/codex_uniopbench_dryrun_check/: run_summary.json
task/task_results/uniopbench/a100_uniopbench_v1/runs/codex_uniopbench_dryrun_check_round_fresh/: run_summary.json
task/task_results/uniopbench/a100_uniopbench_v1/runs/codex_uniopbench_dryrun_isolation_check/: run_summary.json
task/uniopbench/: OPTIMIZE_TASK.md  OPTIMIZE_TASK_HYGON.md  README.md  TASK.md  TASK_HYGON.md  cli.py  orchestrator.py  session_runner.py  task.yaml  task_hygon_k100.yaml  task_vllm_example.yaml
template/: binding.cpp  binding_registry.h
template/utils/: __init__.py  compile.py  compile.sh  profiling.py  verification.py
tests/data/: fork_quiz_questions.py
tests/integration_mock_api/: test_headless.py  test_runtime_smoke.py
tests/integration_real_api/: test_enhancements_real.py  test_live_session_smoke.py
tests/unit/: test_cli_prompt.py  test_commands.py  test_edit_file.py  test_enhancements.py  test_fork_tools.py  test_preemption.py  test_skills.py  test_task_manager.py  test_uniopbench_resume.py
uniopbench/a100_uniopbench_v1/runs/20260308_222632/: PERF_REPORT.md
uniopbench/a100_uniopbench_v1/runs/20260308_222632/operators/activation__elu/: result.json
uniopbench/a100_uniopbench_v1/runs/20260308_222632/operators/activation__hardswish/: result.json
uniopbench/a100_uniopbench_v1/runs/20260308_222632/operators/activation__relu/: result.json
(+529 files in other folders)
