[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ict-agent"
version = "0.1.0"
description = "Refactored preemptible coding agent runtime with CUDA task support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "anthropic>=0.39.0",
  "tiktoken>=0.7.0",
  "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ict-agent = "ict_agent.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "real_api: exercises the live agent against a real LLM API",
]
